Changed the image source and contact detail!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td><img src="C:\Users\win10\OneDrive\Desktop\Full stack web HTML\HTML-Personal site\Arpita.png" alt="Arpita Profile Picture"></td>
+        <td><img src="Arpita.png" alt="Arpita Profile Picture"></td>
         <td> <h1>ARPITA</h1>
          <p><em><strong>Student</strong></em></p>
          <p>A meticulous and passionate person, having the ability to bounce back in any circumstance. I have an immense interest in contributing to open source. Always seeking opportunities to grow and learn more skills which can benefit me as a professional in future and helps contribute to the growth of the organisation I work for.</p></td>
@@ -55,7 +55,7 @@
   </ul>
   <h3>CONTACT</h3>
   <ul>
-    <li>  <a href="file:///C:/Users/win10/OneDrive/Desktop/Full%20stack%20web%20HTML/HTML-Personal%20site/Contact.html#">Details</a></li>
+    <li>  <a href="Contact.html#">Details</a></li>
   </ul>
   <br>
   <hr>
