--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
   <ul>
   <li><a href="https://www.linkedin.com/in/arpita-das-a66171216/">linkedin</a></li>
   <br>
-  <hr>
   </ul>
   <h3>CONTACT</h3>
   <ul>
-    <li>  <a href="Contact.html#">Details</a></li>
+    <li>  <a href="Contact.html">Details</a></li>
+  <hr>
   </ul>
   <br>
   <hr>
