--- a/index.html
+++ b/index.html
@@ -2,86 +2,85 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>🖤Arpita's Personal site</title>
+    <title>Arpita</title>
+    <link rel="stylesheet" href="CSS\Styles.Css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-    <table cellspacing=20>
-      <tr>
-        <td><img src="Arpita.png" alt="Arpita Profile Picture"></td>
-        <td> <h1>ARPITA</h1>
-         <p><em><strong>Student</strong></em></p>
-         <p>A meticulous and passionate person, having the ability to bounce back in any circumstance. I have an immense interest in contributing to open source. Always seeking opportunities to grow and learn more skills which can benefit me as a professional in future and helps contribute to the growth of the organisation I work for.</p></td>
-      </tr>
-    </table>
-     <hr>
-     <h3>EDUCATION</h3>
-     <ul>
-       <li> <a href="https://adlssunshine.org/">ADLS Sunshine School</a> ,Jamshedpur
-         <br>
-          <strong>Matriculation</strong>
+  <div class="Portfolio">
+    <img class="top-cloud" src="Images/cloud.png" alt="top cloud">
+    <h1>I'm Arpita.</h1>
+    <h2>A Programmer!</h2>
+    <img class="bottom-cloud" src="Images/cloud.png" alt="bottom cloud">
+    <img src="Images/profileicon.jpg" alt="icon">
+    <hr>
+    <h2>Hello.</h2>
+    <p class="intro">A meticulous and passionate person, having the ability to bounce back in any circumstance. I have an immense interest in contributing to open source. Always seeking opportunities to grow and learn more skills which can benefit me as a professional in future and helps contribute to the growth of the organisation I work for.</p>
+  </div>
+  <hr>
+  <div class="Education">
+    <h2>Education</h2>
+    <img class="adls" src="Images/education.jpg" alt="education">
+      <ul>
+        <li> <a href="https://adlssunshine.org/">ADLS Sunshine School</a> ,Jamshedpur
           <br>
-        completion Date:June 2019
-        <br>
+           <strong>Matriculation</strong>
+           <br>
+         completion Date:June 2019
+         <br>
+         Grade:A+
+         <br>
+         Relevent Coursework:English+Science+Maths+Hindi</li>
+         <br>
+         <li> <a href="https://adlssunshine.org/">ADLS Sunshine School</a> ,Jamshedpur
+           <br>
+         <strong>Intermediate</strong>
+         <br>
+         Graduation Date:June 2022
+       <br>
         Grade:A+
         <br>
         Relevent Coursework:English+Science+Maths+Hindi</li>
-        <br>
-        <li> <a href="https://adlssunshine.org/">ADLS Sunshine School</a> ,Jamshedpur
-          <br>
-        <strong>Intermediate</strong>
-        <br>
-      Graduation Date:June 2022
-      <br>
-    Grade:A+
-    <br>
-  Relevent Coursework:English+Science+Maths+Hindi</li>
-  <br>
+  </div>
   <hr>
-  <h3>HOBBIES</h3>
-  <ol>
-    <li>Coding</li>
-    <li>Cooking</li>
-    <li>Baking</li>
-    <li>Reading Historical books</li>
-    <li>Watching Historical documentaries specifically of British and Indian origin</li>
-  </ol>
-  <br>
+  <div class="Skills">
+    <h2>Skills</h2>
+    <img src="Images/skill.jpg" alt="skill">
+    <h2>Web Development</h2>
+        <img src="Images/htmlcss.jpg" alt="web dev">
+        <p>I've immense interest in the domain of web Development as it provides the opportunity to express one's creativity on the internet.</p>
+        <p>I've been learning it from the Angela Yu's Course (Full Stack Web Development)that's available on Udemy which is India's greatest learning platform.</p>
+        <h3>Web Dev skills</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+  </div>
   <hr>
-  <h3>LINKS</h3>
-  <ul>
-  <li><a href="https://www.linkedin.com/in/arpita-das-a66171216/">linkedin</a></li>
-  <br>
-  </ul>
-  <h3>CONTACT</h3>
-  <ul>
-    <li>  <a href="Contact.html">Details</a></li>
-  <hr>
-  </ul>
-  <br>
-  <hr>
-  <h3>SKILLS</h3>
-  <ul>
-    <table>
-      <tr>
-        <td><li><strong>Web Development</strong></li></td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-    <ol>
-      <li>HTML</li>
-      <li>Css</li>
-      <li>Javascript</li>
-      <li>Nodejs</li>
-      <li>APIs</li>
-      <li>Git Github and Version Control</li>
-      <li>Databases</li>
-      <li>SQL</li>
-      <li>MangoDB</li>
-      <li>Mangoose</li>
-      <li>React.js</li>
-    </ol>
-    </ul>
-
-
+  <div class="hobbies">
+     <h2>Hobbies</h2>
+     <img src="Images/hobbies.jpg" alt="hobbies">
+     <ol>
+       <li>Coding</li>
+       <li>Cooking</li>
+       <li>Baking</li>
+       <li>Reading Historical books</li>
+       <li>Watching Historical document aries specifically of British and Indian origin</li>
+     </ol>
+   </div>
+   <hr>
+   <div class="Contact">
+     <h2>Contact me</h2>
+     <img src="Images/contact.jpg" alt="contact">
+  <p>You can connect with me by clicking on the link provided below!</p>
+  <a href="mailto:arpitaistic@email.com" class="buttonClass">Contact</a>
+   </div>
+   <hr>
+   <div class="footer">
+       <a href="https://www.linkedin.com/in/arpita-das-a66171216/">LinkedIn</a>
+      <a href="https://github.com/Arpitaistic">Github</a>
+      <p class="copyright">©Arpitaistic</p>
+   </div>
   </body>
 </html>
